Removes download links... they silly

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <p>ActsAsAsync is an ActiveRecord extension that provides your models with easy-to-use Resque helpers.</p>
         <p class="view"><a href="https://github.com/bloudermilk/acts_as_async">View the Project on GitHub <small>bloudermilk/acts_as_async</small></a></p>
         <ul>
-          <li><a href="https://github.com/bloudermilk/acts_as_async/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/bloudermilk/acts_as_async/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/bloudermilk/acts_as_async">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/bloudermilk/acts_as_async">View On <strong>Rubygems</strong></a></li>
         </ul>
       </header>
       <section>
